--- a/AE_MonoObjetivo.ipynb
+++ b/AE_MonoObjetivo.ipynb
@@ -5740,6 +5740,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "collapsed": true,
         "id": "OijBPGOuZt41",
         "outputId": "43a572ab-a210-4304-da85-860ca3be6558"
       },
